nona7 のstaticEval のtest を書いた

--- a/test/Makefile
+++ b/test/Makefile
@@ -19,7 +19,7 @@ gtest.a : gtest-all.o
 gtest_main.a : gtest-all.o gtest_main.o
 	$(AR) $(ARFLAGS) $@ $^
 
-TESTS = board_unittest koyone_unittest
+TESTS = board_unittest koyone_unittest nona7_unittest
 
 MINE = $(USER_DIR)/board.cpp $(USER_DIR)/board.hpp $(USER_DIR)/kihime.cpp $(USER_DIR)/kihime.hpp $(USER_DIR)/kihimeNext.cpp $(USER_DIR)/kihimeNext.hpp $(USER_DIR)/koyone.cpp $(USER_DIR)/koyone.hpp $(USER_DIR)/koyoneNext.cpp $(USER_DIR)/koyoneNext.hpp $(USER_DIR)/nona7.cpp $(USER_DIR)/nona7.hpp
 MINE_O = board.o koyone.o koyoneNext.o kihime.o kihimeNext.o nona7.o
@@ -52,6 +52,12 @@ koyone_unittest.o : $(TESTSRC_DIR)/test.hpp $(TESTSRC_DIR)/koyone_unittest.cpp $
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $(TESTSRC_DIR)/koyone_unittest.cpp
 
 koyone_unittest : $(MINE_O) koyone_unittest.o gtest_main.a
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $@
+
+nona7_unittest.o : $(TESTSRC_DIR)/test.hpp $(TESTSRC_DIR)/nona7_unittest.cpp $(USER_DIR)/nona7.hpp $(GTEST_HEADERS)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $(TESTSRC_DIR)/nona7_unittest.cpp
+
+nona7_unittest : $(MINE_O) nona7_unittest.o gtest_main.a
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $@
 
 test: $(TESTS)
